--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,4 @@ spring.datasource.url=jdbc:h2:mem:dosyasorgualanlari
 spring.jpa.hibernate.ddl-auto=update
 
 #Local MongoDB config
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=us_db
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb+srv://ridvanozturk94:RID123van.@cluster0.rlcso9m.mongodb.net/db01?retryWrites=true&w=majority
